<resources>
    <string name="app_name">ShoppingApp</string>

    <string name="product">Product</string>

    <string name="list_items">List Items</string>
    <string name="staff_name">Thạch Sang\nID:12345</string>
    <string name="LinesInProduct">
        Limited Edition 2019
        \n
        \t<i><small>2 Product</small></i></string>
    <string name="by_signing_">
    By signing up you agree to our Terms and Condition and Privacy Policy.*
    </string>
    <string name="see_reviews"><u><i>See reivews</i></u></string>
    <string name="num_confirmP9">0</string>
    <string name="choose_size_tuto"><u><i>How can I choose my size ?</i></u></string>
    <string name="btn_confirmP9">Confirm\n(0)</string>
    <string name="btn_waitP9">Wait\n(0)</string>
    <string name="btn_deliveringP9">Delivering\n(0)</string>
    <string name="btn_deliveredP9">Delivered\n(0)</string>
    <string name="title_activity_intro_of_app">IntroOfApp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string-array name="gender">
        <item></item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="status">
        <item>Working</item>
        <item>On vacation</item>
        <item>Absent</item>
    </string-array>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>